# pyinfra-test-example

./: .gitignore  README.md  deploy.py  inventory.py  podman-compose.yaml  pyproject.toml
samples/: python_api_to_vm.py
scripts/: vmhelper
src/deploy_dotfiles/: __init__.py
src/pyinfra_test_example/: __init__.py  inventories.py
src/pyinfra_test_example/deploys/: core.py
tests/: conftest.py  test__core_install.py
